<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment2"
        android:title="@string/home"
        android:enabled="true"
        android:icon="@drawable/home_pro"/>
    <item
        android:id="@+id/wishlistFragment2"
        android:title="@string/wishlist"
        android:enabled="true"
        android:icon="@drawable/favorite_pro"/>
    <item
        android:id="@+id/cartFragment2"
        android:title="@string/cart"
        android:enabled="true"
        android:icon="@drawable/shopping_pro"/>
    <item
        android:id="@+id/searchFragment2"
        android:title="@string/search"
        android:enabled="true"
        android:icon="@drawable/search_24dp_pro"/>
    <item
        android:id="@+id/settingFragment2"
        android:title="@string/setting"
        android:enabled="true"
        android:icon="@drawable/settings_pro"/>
</menu>