<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".welcome2Fragment">

    <TextView
        android:layout_width="@dimen/_30ssp"
        android:layout_height="@dimen/_30ssp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/_2_3"
        app:layout_constraintVertical_bias="0.04"
        app:layout_constraintHorizontal_bias="0.04"
        android:textStyle="bold" />
    <ImageView
        android:layout_width="300sp"
        android:layout_height="300sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/welcome2"
        app:layout_constraintVertical_bias="0.3"


        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/arbutus"
        android:text="@string/make_payment"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.611" />

    <TextView
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome_to_your_app_name_where_shopping_meets_convenience_and_style_discover_a_curated_selection_of_your_product_category_that_s_handpicked_just_for_you_whether_you_re_looking_for_everyday_essentials_or_unique_finds_we_ve_got_you_covered_start_exploring_and_find_exactly_what_you_need_right_at_your_fingertips"
        android:textAppearance="@style/amet_minim_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"
        android:src="@drawable/circle2"
        />
    <TextView
        android:id="@+id/next2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96"
        android:textAppearance="@style/next"
        android:text="@string/next"
        app:layout_constraintHorizontal_bias="0.94"
        android:textStyle="bold"
        />
    <androidx.appcompat.widget.Toolbar

        android:id="@+id/prev1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.982"
        android:textAppearance="@style/next2"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:layout_constraintHorizontal_bias="0.03"
        android:textStyle="bold"
        />

</androidx.constraintlayout.widget.ConstraintLayout>